finished flexibility and added images.

--- a/flexibility.html
+++ b/flexibility.html
@@ -19,7 +19,9 @@
         modal: true
     });
     </script>
-    
+    <!-- CSS for consistency --> 
+    <link href="./css/main_aesthetics.css" rel="stylesheet">
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/support.css" rel="stylesheet">
@@ -69,42 +71,43 @@
 
     <div class="header">
         <h1 class="htitle">Flexibility</h1>
-        <p class="hdescription"> Usuability Evaluation of the University of Leicester website through Neilsen's 10 Heuristics</p>
+        <p class="hdescription">A website should accommodate novice and experienced users, and handle direct linking well.</p>
       </div>
 
         <div class="col-sm-8 blog-main">
 
           <div class="blog-post">
-            <h2 class="blog-post-title">Sample blog post</h2>
-            <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
+            <div class="row">
+                      <div class="col-sm-6">
+                          <p>Overall, this site seems to have very few features for frequent users. Based on the links displayed on the homepage (and throughout the site) it appears tailored towards prospective undergraduate and graduate students, not current students or faculty. As such, the amount of “accelerators” for expert users are minimal. There are is no quick links or frequent links dropdown or menu. The only substitute for this is the links displayed in the footer, but the user must scroll all the way down the page to access this.
+                          </p>
+                      </div>
+                      <a href="./screenshots/flexibility_footer.png" rel="shadowbox" class="image_consistency_nav_container">
+                          <div class="col-sm-6"><img src="./screenshots/flexibility_footer.png" class="image_consistency"/></div>
+                      </a>
+                  </div>
+                  <hr>
 
-            <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-            <hr>
-            <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-            <blockquote>
-              <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            </blockquote>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            <h2>Heading</h2>
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-            <pre><code>Example code block</code></pre>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <ul>
-              <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-              <li>Donec id elit non mi porta gravida at eget metus.</li>
-              <li>Nulla vitae elit libero, a pharetra augue.</li>
-            </ul>
-            <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-            <ol>
-              <li>Vestibulum id ligula porta felis euismod semper.</li>
-              <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
-              <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
-            </ol>
-            <p>Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.</p>
+                  <div class="row">
+                      <div class="col-sm-6">
+                          <p>As far as the site’s ability to be linked to, it does not do much better. There are several pages that I was able to identify quickly that did not have any return links to the rest of the website. Two examples of this are the Prospectus form and the site search powered by Google. If a user was directly linked to either of those pages there is no easy way to return to the homepage of the site. 
+                          </p>
+                      </div>
+                      <a href="./screenshots/errorprevention_prospectus.png" rel="shadowbox" class="image_consistency_nav_container">
+                          <div class="col-sm-6"><img src="./screenshots/errorprevention_prospectus.png" class="image_consistency"/></div>
+                      </a>
+                  </div>
+                  <hr>
+                  <div class="row">
+                      <div class="col-sm-6">
+                          <p>Excluding the pages that lack links back to the site, most of the other pages do fairly well. Most of the content pages have breadcrumbs which can take the user back to the current category’s level two page and the university's logo always redirects the user to the homepage. Furthermore, there are usually “related links” in the left and right columns which can help the user navigate to relevant pages from the page the were linked to directly. 
+                          </p>
+                      </div>
+                      <a href="./screenshots/flexibility_relatedlinks.png" rel="shadowbox" class="image_consistency_nav_container">
+                          <div class="col-sm-6"><img src="./screenshots/flexibility_relatedlinks.png" class="image_consistency"/></div>
+                      </a>
+                  </div>
+
           </div><!-- /.blog-post -->
 
 
