Finished recognition and images

--- a/recognition.html
+++ b/recognition.html
@@ -20,6 +20,9 @@
     });
     </script>
 
+    <!-- CSS for consistency --> 
+    <link href="./css/main_aesthetics.css" rel="stylesheet">
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/support.css" rel="stylesheet">
@@ -75,36 +78,29 @@
         <div class="col-sm-8 blog-main">
 
           <div class="blog-post">
-            <h2 class="blog-post-title">Sample blog post</h2>
-            <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
-
-            <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-            <hr>
-            <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-            <blockquote>
-              <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            </blockquote>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            <h2>Heading</h2>
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-            <pre><code>Example code block</code></pre>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <ul>
-              <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-              <li>Donec id elit non mi porta gravida at eget metus.</li>
-              <li>Nulla vitae elit libero, a pharetra augue.</li>
-            </ul>
-            <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-            <ol>
-              <li>Vestibulum id ligula porta felis euismod semper.</li>
-              <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
-              <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
-            </ol>
-            <p>Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.</p>
+            <div class="row">
+                      <div class="col-sm-6">
+                          <p>The primary problem with using the breadcrumbs for navigation (on this site) is that often links on a level two or three page will suddenly move you to a subpage in a completely different category. For example, a breadcrumb link on the titled “Academic Departments” (which is a level two category) may move you to the level three page “Academic Departments A-Z” in the “Indexes” category. Along with a slightly different column alignment and a completely different color scheme, the breadcrumb trail has changed to the “Indexes” category. This transformation renders them useless in returning you to the previous page you were visiting. 
+                          </p>
+                      </div>
+                      <a href="./screenshots/recognition_breadcrubswitch1.png" rel="shadowbox" class="image_consistency_nav_container">
+                          <div class="col-sm-6"><img src="./screenshots/recognition_breadcrubswitch1.png" class="image_consistency"/></div>
+                      </a>
+                      <a href="./screenshots/recognition_breadcrubswitch2.png" rel="shadowbox" class="image_consistency_nav_container">
+                          <div class="col-sm-6"><img src="./screenshots/recognition_breadcrubswitch2.png" class="image_consistency"/></div>
+                      </a>
+                  </div>
+                  <hr>
+                  <div class="row">
+                      <div class="col-sm-6">
+                          <p>The use of different background colors to delineate each of the different level two categories can be a helpful indicator as to where you are, but falls flat for one main reason. The different categories have far too many references to one another. It seems like almost every page contains links that take you to a completely different category and with it, a new background. This means that the background color is constantly changing as you navigate through the site, so it becomes less of an indicator and more of an inconsistent aesthetic choice.
+                          </p>
+                      </div>
+                      <a href="./screenshots/recognition_colorindicates2ndlevel.png" rel="shadowbox" class="image_consistency_nav_container">
+                          <div class="col-sm-6"><img src="./screenshots/recognition_colorindicates2ndlevel.png" class="image_consistency"/></div>
+                      </a>
+                  </div>
+                  <hr>
           </div><!-- /.blog-post -->
 
 
