Added icon to pages and changed index.hmtl title.

--- a/recognition.html
+++ b/recognition.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="./screenshots/icon.png">
 
     <title>Usability Evaluation</title>
 
@@ -24,7 +24,7 @@
     <link href="./css/main_aesthetics.css" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">SS
     <link href="css/support.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
