Changed the description for Consistency and User Control.

--- a/consistency.html
+++ b/consistency.html
@@ -71,8 +71,8 @@
     <div class="row">
 
     <div class="header">
-        <h1 class="htitle">Consistency</h1>
-        <p class="hdescription"> Usuability Evaluation of the University of Leicester website through Neilsen's 10 Heuristics</p>
+        <h1 class="htitle">Consistency and Standards</h1>
+        <p class="hdescription">Does the site use consistent navigation, layout and color scheme?</p>
       </div>
 
         <div class="col-sm-8 blog-main">
