--- a/usercontrol.html
+++ b/usercontrol.html
@@ -71,7 +71,7 @@
 
     <div class="header">
         <h1 class="htitle">User Control</h1>
-        <p class="hdescription"> Usuability Evaluation of the University of Leicester website through Neilsen's 10 Heuristics</p>
+        <p class="hdescription"> Does the site allow the user to cancel animation or start and stop things? </p>
       </div>
 
         <div class="col-sm-8 blog-main">
