Got all pages to pass w3c validator. Had to change shadowbox.js to support class tag instead of rel tag.

--- a/errorrecovery.html
+++ b/errorrecovery.html
@@ -46,7 +46,7 @@
       <div class="container-fluid">
         <nav class="blog-nav">
           <a class="blog-nav-item" href="index.html">Home</a>
-          <li class ="blog-nav-item active" class="dropdown">
+          <div class ="blog-nav-item active dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Heuristics<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="./visibility.html">Visibility of System Status</a></li>
@@ -60,7 +60,7 @@
                 <li class ="active"><a href="./errorrecovery.html">Error Recovery</a></li>
                 <li><a href="./help.html">Help and Documentation</a></li>
               </ul>
-            </li>
+            </div>
         </nav>
       </div>
     </div>
@@ -83,8 +83,8 @@
                       <p>If the site receives an unidentified URL, it effectively guides the user to fix the error. The site contains plain language understandable to anyone who speaks English. Also, the site suggests some solutions about what the user might have typed in. It is helpful that this page keeps its consistency because the user can see how to go back home on the tabs. The color change to dark blue helps the user by letting them know something does not fit with the other pages.
                       </p>
                   </div>
-                  <a href="./screenshots/errorrec1.png" rel="shadowbox">
-                      <div class="col-sm-6" ><img src="./screenshots/errorrec1.png" class="image_errorrecovery"/></div>                   
+                  <a href="./screenshots/errorrec1.png" class="shadowbox">
+                      <div class="col-sm-6" ><img alt="" src="./screenshots/errorrec1.png" class="image_errorrecovery"/></div>                   
                   </a>
               </div>
               <hr>
@@ -93,8 +93,8 @@
                         <p>It is clear that there was an error because the system states it cannot find what the user searched for. The message is simple and understandable. However, the system does not provide a reason for the error or a way to fix it.
                         </p>
                     </div>
-                  <a href="./screenshots/errorrec2.png" rel="shadowbox">
-                      <div class="col-sm-6"><img src="./screenshots/errorrec2.png" class="image_errorrecovery"/></div>                   
+                  <a href="./screenshots/errorrec2.png" class="shadowbox">
+                      <div class="col-sm-6"><img alt="" src="./screenshots/errorrec2.png" class="image_errorrecovery"/></div>                   
                   </a>
               </div>
               <hr>
