--- a/flexibility.html
+++ b/flexibility.html
@@ -45,7 +45,7 @@
       <div class="container-fluid">
         <nav class="blog-nav">
           <a class="blog-nav-item" href="index.html">Home</a>
-         <li class ="blog-nav-item active" class="dropdown">
+         <div class ="blog-nav-item active dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Heuristics<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="./visibility.html">Visibility of System Status</a></li>
@@ -59,7 +59,7 @@
                 <li><a href="./errorrecovery.html">Error Recovery</a></li>
                 <li><a href="./help.html">Help and Documentation</a></li>
               </ul>
-            </li>
+            </div>
         </nav>
       </div>
     </div>
@@ -82,8 +82,8 @@
                           <p>Overall, this site seems to have very few features for frequent users. Based on the links displayed on the homepage (and throughout the site) it appears tailored towards prospective undergraduate and graduate students, not current students or faculty. As such, the amount of “accelerators” for expert users are minimal. There are is no quick links or frequent links dropdown or menu. The only substitute for this is the links displayed in the footer, but the user must scroll all the way down the page to access this.
                           </p>
                       </div>
-                      <a href="./screenshots/flexibility_footer.png" rel="shadowbox" class="image_consistency_nav_container">
-                          <div class="col-sm-6"><img src="./screenshots/flexibility_footer.png" class="image_consistency"/></div>
+                      <a href="./screenshots/flexibility_footer.png"  class="shadowbox image_consistency_nav_container">
+                          <div class="col-sm-6"><img alt="" src="./screenshots/flexibility_footer.png" class="image_consistency"/></div>
                       </a>
                   </div>
                   <hr>
@@ -93,8 +93,8 @@
                           <p>As far as the site’s ability to be linked to, it does not do much better. There are several pages that I was able to identify quickly that did not have any return links to the rest of the website. Two examples of this are the Prospectus form and the site search powered by Google. If a user was directly linked to either of those pages there is no easy way to return to the homepage of the site. 
                           </p>
                       </div>
-                      <a href="./screenshots/errorprevention_prospectus.png" rel="shadowbox" class="image_consistency_nav_container">
-                          <div class="col-sm-6"><img src="./screenshots/errorprevention_prospectus.png" class="image_consistency"/></div>
+                      <a href="./screenshots/errorprevention_prospectus.png"  class="shadowbox image_consistency_nav_container">
+                          <div class="col-sm-6"><img alt="" src="./screenshots/errorprevention_prospectus.png" class="image_consistency"/></div>
                       </a>
                   </div>
                   <hr>
@@ -103,8 +103,8 @@
                           <p>Excluding the pages that lack links back to the site, most of the other pages do fairly well. Most of the content pages have breadcrumbs which can take the user back to the current category’s level two page and the university's logo always redirects the user to the homepage. Furthermore, there are usually “related links” in the left and right columns which can help the user navigate to relevant pages from the page the were linked to directly. 
                           </p>
                       </div>
-                      <a href="./screenshots/flexibility_relatedlinks.png" rel="shadowbox" class="image_consistency_nav_container">
-                          <div class="col-sm-6"><img src="./screenshots/flexibility_relatedlinks.png" class="image_consistency"/></div>
+                      <a href="./screenshots/flexibility_relatedlinks.png"  class="shadowbox image_consistency_nav_container">
+                          <div class="col-sm-6"><img alt="" src="./screenshots/flexibility_relatedlinks.png" class="image_consistency"/></div>
                       </a>
                   </div>
 
