--- a/help.html
+++ b/help.html
@@ -46,7 +46,7 @@
       <div class="container-fluid">
         <nav class="blog-nav">
           <a class="blog-nav-item " href="index.html">Home</a>
-          <li class ="blog-nav-item active" class="dropdown">
+          <div class ="blog-nav-item active dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Heuristics<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="./visibility.html">Visibility of System Status</a></li>
@@ -60,7 +60,7 @@
                 <li><a href="./errorrecovery.html">Error Recovery</a></li>
                 <li class ="active"><a href="./help.html">Help and Documentation</a></li>
               </ul>
-            </li>
+            </div>
         </nav>
       </div>
     </div>
@@ -83,8 +83,8 @@
                       <p>The system does provide help on the bottom of the page. Its is effectively placed among other similar categories to help the users. These links lead to other pages that help categorize larger data sets. The contact information is right next to the help button which is useful if you have any other questions.  
                       </p>
                   </div>
-                  <a href="./screenshots/help1.png" rel="shadowbox">
-                      <div class="col-sm-6" ><img src="./screenshots/help1.png" class="image_help"/></div>                   
+                  <a href="./screenshots/help1.png" class="shadowbox">
+                      <div class="col-sm-6" ><img alt="" src="./screenshots/help1.png" class="image_help"/></div>                   
                   </a>
               </div>
               <hr>
@@ -93,8 +93,8 @@
                         <p> There is a page that provides a lot of links depending on who is visiting the site. The links are a bit too clustered but the topic of each link is very helpful. The links are also helpful because they are categorized with the type of user. The colors and sizes of the fonts are helpful to tell which are links and headers. 
                         </p>
                     </div>
-                  <a href="./screenshots/help2.png" rel="shadowbox">
-                      <div class="col-sm-6"><img src="./screenshots/help2.png" class="image_help"/></div>                   
+                  <a href="./screenshots/help2.png" class="shadowbox">
+                      <div class="col-sm-6"><img alt="" src="./screenshots/help2.png" class="image_help"/></div>                   
                   </a>
               </div>
               <hr>
