--- a/usercontrol.html
+++ b/usercontrol.html
@@ -45,7 +45,7 @@
       <div class="container-fluid">
         <nav class="blog-nav">
           <a class="blog-nav-item" href="index.html">Home</a>
-          <li class ="blog-nav-item active" class="dropdown">
+          <div class ="blog-nav-item active dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Heuristics<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="./visibility.html">Visibility of System Status</a></li>
@@ -59,7 +59,7 @@
                 <li><a href="./errorrecovery.html">Error Recovery</a></li>
                 <li><a href="./help.html">Help and Documentation</a></li>
               </ul>
-            </li>
+            </div>
         </nav>
       </div>
     </div>
@@ -83,8 +83,8 @@
 The only time when there is “loading”, is when we go to the virtual tour. But it doesn t take more than a couple of seconds to get the tour going.
                       </p>
                   </div>
-                  <a href="./screenshots/usercontrol_virtual.png" rel="shadowbox">
-                      <div class="col-sm-6" ><img src="./screenshots/usercontrol_virtual.png" class="image_usercontrol"/></div>                   
+                  <a href="./screenshots/usercontrol_virtual.png" class="shadowbox">
+                      <div class="col-sm-6" ><img alt="" src="./screenshots/usercontrol_virtual.png" class="image_usercontrol"/></div>                   
                   </a>
               </div>
           </div><!-- /.blog-post -->
