--- a/visibility.html
+++ b/visibility.html
@@ -45,7 +45,7 @@
       <div class="container-fluid">
         <nav class="blog-nav">
           <a class="blog-nav-item" href="./index.html">Home</a>
-          <li class ="blog-nav-item active" class="dropdown">
+          <div class ="blog-nav-item active dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Heuristics<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li class ="active"><a href="./visibility.html">Visibility of System Status</a></li>
@@ -59,7 +59,7 @@
                 <li><a href="./errorrecovery.html">Error Recovery</a></li>
                 <li><a href="./help.html">Help and Documentation</a></li>
               </ul>
-            </li>
+            </div>
         </nav>
       </div>
     </div>
@@ -82,8 +82,8 @@
                       <p>Navigation is pretty explicit on this website. On the main page, it is easily inferred that the user can navigate to four main sections: “Study with Us”, “Our Research”, “Business & Enterprise”, “Alumni & Supporters”.
                       </p>
                   </div>
-                  <a href="./screenshots/visibility_home_page.png" rel="shadowbox">
-                      <div class="col-sm-6" ><img src="./screenshots/visibility_home_page.png" class="image_visibility"/></div>                   
+                  <a href="./screenshots/visibility_home_page.png" class="shadowbox">
+                      <div class="col-sm-6" ><img alt="" src="./screenshots/visibility_home_page.png" class="image_visibility"/></div>                   
                   </a>
               </div>
               <hr>
@@ -92,8 +92,8 @@
                         <p>However, if the user wants to go to “Our Research”, they have to press the “Our Research” tab, and press “Our Research” again. This double click is unnecessary.
                         </p>
                     </div>
-                  <a href="./screenshots/visibility_double_our_research.png" rel="shadowbox">
-                      <div class="col-sm-6"><img src="./screenshots/visibility_double_our_research.png" class="image_visibility"/></div>                   
+                  <a href="./screenshots/visibility_double_our_research.png" class="shadowbox">
+                      <div class="col-sm-6"><img alt="" src="./screenshots/visibility_double_our_research.png" class="image_visibility"/></div>                   
                   </a>
               </div>
               <hr>
@@ -102,8 +102,8 @@
                         <p>It is fairly easy to see where we are by looking at the directory-like map. This allows the user to easily navigate back to the main page. However, the aesthetics of the navigation bar could greatly be improved.
                         </p>
                     </div>
-                  <a href="./screenshots/visibility_nav_bar.png" rel="shadowbox">
-                      <div class="col-sm-6"><img src="./screenshots/visibility_nav_bar.png" class="image_visibility"/></div>                   
+                  <a href="./screenshots/visibility_nav_bar.png" class="shadowbox">
+                      <div class="col-sm-6"><img alt="" src="./screenshots/visibility_nav_bar.png" class="image_visibility"/></div>                   
                   </a>
               </div>
           </div><!-- /.blog-post -->
