--- a/consistency.html
+++ b/consistency.html
@@ -46,7 +46,7 @@
       <div class="container-fluid">
         <nav class="blog-nav">
           <a class="blog-nav-item" href="index.html">Home</a>
-          <li class ="blog-nav-item active" class="dropdown">
+          <div class ="blog-nav-item active dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Heuristics<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="./visibility.html">Visibility of System Status</a></li>
@@ -60,7 +60,7 @@
                 <li><a href="./errorrecovery.html">Error Recovery</a></li>
                 <li><a href="./help.html">Help and Documentation</a></li>
               </ul>
-            </li>
+            </div>
         </nav>
       </div>
     </div>
@@ -86,16 +86,16 @@
                           <p>For navigation, the home page looks nothing like any other page, it feels that we go through two different websites. If we research something, we go to the google page, embedded in the website, but it does not  feel like the navigation is consistent. 
                           </p>
                       </div>
-                      <a href="./screenshots/consistency_home_page.png" rel="shadowbox" class="image_consistency_nav_container">
-                          <div class="col-sm-6"><img src="./screenshots/consistency_home_page.png" class="image_consistency"/></div>
+                      <a href="./screenshots/consistency_home_page.png" class="shadowbox image_consistency_nav_container">
+                          <div class="col-sm-6"><img alt="" src="./screenshots/consistency_home_page.png" class="image_consistency"/></div>
                       </a>
                   </div>
                   <div class="row">
-                      <a href="./screenshots/consistency_business.png" rel="shadowbox">
-                          <div class="col-sm-6" ><img src="./screenshots/consistency_business.png" class="image_consistency"/></div>
+                      <a href="./screenshots/consistency_business.png" class="shadowbox">
+                          <div class="col-sm-6" ><img alt="" src="./screenshots/consistency_business.png" class="image_consistency"/></div>
                       </a>
-                      <a href="./screenshots/consistency_google_search.png" rel="shadowbox">
-                          <div class="col-sm-5" ><img src="./screenshots/consistency_google_search.png" class="image_consistency"/></div>
+                      <a href="./screenshots/consistency_google_search.png" class="shadowbox">
+                          <div class="col-sm-5" ><img alt="" src="./screenshots/consistency_google_search.png" class="image_consistency"/></div>
                       </a>
                   </div>
               </div>
@@ -108,11 +108,11 @@
                       </div>
                   </div>
                   <div class="row">
-                      <a href="./screenshots/consistency_business_enterprise.png" rel="shadowbox">
-                          <div class="col-sm-6" ><img src="./screenshots/consistency_business_enterprise.png" class="image_consistency"/></div>
+                      <a href="./screenshots/consistency_business_enterprise.png" class="shadowbox">
+                          <div class="col-sm-6" ><img alt="" src="./screenshots/consistency_business_enterprise.png" class="image_consistency"/></div>
                       </a>
-                      <a href="./screenshots/consistency_business_services.png" rel="shadowbox">
-                          <div class="col-sm-6" ><img src="./screenshots/consistency_business_services.png" class="image_consistency"/></div>
+                      <a href="./screenshots/consistency_business_services.png" class="shadowbox">
+                          <div class="col-sm-6" ><img alt="" src="./screenshots/consistency_business_services.png" class="image_consistency"/></div>
                       </a>
                   </div>
               </div>
@@ -125,13 +125,13 @@
                       </div>
                   </div>
                   <div class="row">
-                      <a href="./screenshots/consistency_search_button.png" rel="shadowbox" class="image_consistency_button_container">
-                          <div class="col-sm-12" ><img src="./screenshots/consistency_search_button.png" class="image_consistency_button"/></div>
+                      <a href="./screenshots/consistency_search_button.png" class="shadowbox image_consistency_button_container">
+                          <div class="col-sm-12" ><img alt="" src="./screenshots/consistency_search_button.png" class="image_consistency_button"/></div>
                       </a>
                   </div>
                   <div class="row">
-                      <a href="./screenshots/consistency_letter_button.png" rel="shadowbox" class="image_consistency_button_container">
-                          <div class="col-sm-12" ><img src="./screenshots/consistency_letter_button.png" class="image_consistency_button"/></div>
+                      <a href="./screenshots/consistency_letter_button.png" class="shadowbox image_consistency_button_container">
+                          <div class="col-sm-12" ><img alt="" src="./screenshots/consistency_letter_button.png" class="image_consistency_button"/></div>
                       </a>
                   </div>
               </div>
@@ -144,17 +144,18 @@
                       </div>
                   </div>
                   <div class="row">
-                      <a href="./screenshots/consistency_home_contact_bar.png" rel="shadowbox" class="image_consistency_button_container">
-                          <div class="col-sm-12" ><img src="./screenshots/consistency_home_contact_bar.png" id="image_consistency_contact_bar_home"/></div>
-                  </div>
-                  <div class="row">
-                      <a href="./screenshots/consistency_our_research_contact_bar.png" rel="shadowbox"  class="image_consistency_button_container">
-                          <div class="col-sm-12" ><img src="./screenshots/consistency_our_research_contact_bar.png" class="image_consistency_contact_bar"/></div>
+                      <a href="./screenshots/consistency_home_contact_bar.png" class="shadowbox image_consistency_button_container">
+                          <div class="col-sm-12" ><img alt="" src="./screenshots/consistency_home_contact_bar.png" id="image_consistency_contact_bar_home"/></div>
                       </a>
                   </div>
                   <div class="row">
-                      <a href="./screenshots/consistency_sports_contact_bar.png" rel="shadowbox"  class="image_consistency_button_container">
-                          <div class="col-sm-12" ><img src="./screenshots/consistency_sports_contact_bar.png" class="image_consistency_contact_bar"/></div>
+                      <a href="./screenshots/consistency_our_research_contact_bar.png" class=" shadowboximage_consistency_button_container">
+                          <div class="col-sm-12" ><img alt="" src="./screenshots/consistency_our_research_contact_bar.png" class="image_consistency_contact_bar"/></div>
+                      </a>
+                  </div>
+                  <div class="row">
+                      <a href="./screenshots/consistency_sports_contact_bar.png" class="shadowbox image_consistency_button_container">
+                          <div class="col-sm-12" ><img alt="" src="./screenshots/consistency_sports_contact_bar.png" class="image_consistency_contact_bar"/></div>
                       </a>
                   </div>
               </div>
@@ -165,14 +166,14 @@
                           <p>The home page presents the website’s brand as colorful, simplistic, with not too much information. However, the rest of the website looks old fashioned, it has too much text everywhere, almost no images, blank backgrounds, etc.
                           </p>
                       </div>
-                      <a href="./screenshots/consistency_home_page.png" rel="shadowbox">
-                          <div class="col-sm-6 image_consistency_brand_container"><img src="./screenshots/consistency_home_page.png" class="image_consistency_brand"/></div>
+                      <a href="./screenshots/consistency_home_page.png" class="shadowbox">
+                          <div class="col-sm-6 image_consistency_brand_container"><img alt="" src="./screenshots/consistency_home_page.png" class="image_consistency_brand"/></div>
                       </a>
                   </div>
                   <div class="row">
                       <div class="col-sm-6">&nbsp;</div>
-                      <a href="./screenshots/consistency_dull_page.png" rel="shadowbox">
-                          <div class="col-sm-6 image_consistency_brand_container"><img src="./screenshots/consistency_dull_page.png" class="image_consistency_brand"/></div>
+                      <a href="./screenshots/consistency_dull_page.png" class="shadowbox">
+                          <div class="col-sm-6 image_consistency_brand_container"><img alt="" src="./screenshots/consistency_dull_page.png" class="image_consistency_brand"/></div>
                       </a>
                   </div>
               </div>
