--- a/errorprevention.html
+++ b/errorprevention.html
@@ -46,7 +46,7 @@
       <div class="container-fluid">
         <nav class="blog-nav">
           <a class="blog-nav-item" href="index.html">Home</a>
-          <li class ="blog-nav-item active" class="dropdown">
+          <div class ="blog-nav-item active dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Heuristics<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="./visibility.html">Visibility of System Status</a></li>
@@ -60,7 +60,7 @@
                 <li><a href="./errorrecovery.html">Error Recovery</a></li>
                 <li><a href="./help.html">Help and Documentation</a></li>
               </ul>
-            </li>
+            </div>
         </nav>
       </div>
     </div>
@@ -83,8 +83,8 @@
                           <p>From the homepage there were two very clear search fields for the user. The first was a prominent “Find your course” search box. After submitting the user was redirected to a page that would either display the search results or indicate that no matches were found. This search field meets the basic requirements for most search fields on the web. 
                           </p>
                       </div>
-                      <a href="./screenshots/errorprevention_coursesearch.png" rel="shadowbox" class="image_consistency_nav_container">
-                          <div class="col-sm-6"><img src="./screenshots/errorprevention_coursesearch.png" class="image_consistency"/></div>
+                      <a href="./screenshots/errorprevention_coursesearch.png" class="shadowbox image_consistency_nav_container">
+                          <div class="col-sm-6"><img alt="" src="./screenshots/errorprevention_coursesearch.png" class="image_consistency"/></div>
                       </a>
                   </div>
                   <hr>
@@ -93,8 +93,8 @@
                           <p>However, the second search field on the homepage, which was unlabeled, did not. Based on placement it can be assumed that the search bar was to do a full site search, but a small hint field in the textbox would have been appreciated. Furthermore, once the user presses submit on the field, they are redirected to a “Google Powered” search page. This did not flow well with the rest of the site. More importantly, this page left the search results completely blank if no results were found. Without an indication of why the page was blank, this can be ambiguous to the user.
                           </p>
                       </div>
-                      <a href="./screenshots/errorprevention_sitesearch.png" rel="shadowbox" class="image_consistency_nav_container">
-                          <div class="col-sm-6"><img src="./screenshots/errorprevention_sitesearch.png" class="image_consistency"/></div>
+                      <a href="./screenshots/errorprevention_sitesearch.png"  class="shadowbox image_consistency_nav_container">
+                          <div class="col-sm-6"><img alt="" src="./screenshots/errorprevention_sitesearch.png" class="image_consistency"/></div>
                       </a>
                   </div>
                   <hr>
@@ -103,8 +103,8 @@
                           <p>In addition to search forms, there were also a few submission forms, such as the “Request a Prospectus” form. This form clearly indicated the mandatory fields and performed validation after pressing submit which indicated which fields were at fault. However, it had an interesting issue where it would only display the email field as having an error until the email was entered correctly. After which, all the other fields would be validated in parallel.
                           </p>
                       </div>
-                      <a href="./screenshots/errorprevention_prospectus.png" rel="shadowbox" class="image_consistency_nav_container">
-                          <div class="col-sm-6"><img src="./screenshots/errorprevention_prospectus.png" class="image_consistency"/></div>
+                      <a href="./screenshots/errorprevention_prospectus.png"  class="shadowbox image_consistency_nav_container">
+                          <div class="col-sm-6"><img alt="" src="./screenshots/errorprevention_prospectus.png" class="image_consistency"/></div>
                       </a>
                   </div>
                   <hr>
@@ -113,11 +113,11 @@
                           <p>Throughout the website there were standard login pages that required a username and password. These pages performed typical validation after the user pressed submit. They often had helpful text that reminded the user which login they should use. As an example, on the IT login page it specified that the user should enter his IT credentials to login. On the “MyStudentLogin” page it reminded the user that they may need to create an account if it is their first time logging in and had a clear link for registration. This text may help user from struggling to determine why they are unable to login.
                           </p>
                       </div>
-                      <a href="./screenshots/errorprevention_loginformerrors.png" rel="shadowbox" class="image_consistency_nav_container">
-                          <div class="col-sm-6"><img src="./screenshots/errorprevention_loginformerrors.png" class="image_consistency"/></div>
+                      <a href="./screenshots/errorprevention_loginformerrors.png"  class="shadowbox image_consistency_nav_container">
+                          <div class="col-sm-6"><img alt="" src="./screenshots/errorprevention_loginformerrors.png" class="image_consistency"/></div>
                       </a>
-                      <a href="./screenshots/errorprevention_loginstudentserror.png" rel="shadowbox" class="image_consistency_nav_container">
-                          <div class="col-sm-6"><img src="./screenshots/errorprevention_loginstudentserror.png" class="image_consistency"/></div>
+                      <a href="./screenshots/errorprevention_loginstudentserror.png" class="shadowbox image_consistency_nav_container">
+                          <div class="col-sm-6"><img alt="" src="./screenshots/errorprevention_loginstudentserror.png" class="image_consistency"/></div>
                       </a>
                   </div>
           </div><!-- /.blog-post -->
