--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a class="blog-nav-item active" href="index.html">Home</a>
           
 
-<li class ="blog-nav-item" class="dropdown">
+<div class ="blog-nav-item dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Heuristics<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="./visibility.html">Visibility of System Status</a></li>
@@ -47,7 +47,7 @@
                 <li><a href="./errorrecovery.html">Error Recovery</a></li>
                 <li><a href="./help.html">Help and Documentation</a></li>
               </ul>
-            </li>
+            </div>
         </nav>
       </div>
     </div>
