--- a/match.html
+++ b/match.html
@@ -45,7 +45,7 @@
       <div class="container-fluid">
         <nav class="blog-nav">
           <a class="blog-nav-item" href="index.html">Home</a>
-          <li class ="blog-nav-item active" class="dropdown">
+          <div class ="blog-nav-item active dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Heuristics<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="./visibility.html">Visibility of System Status</a></li>
@@ -59,7 +59,7 @@
                 <li><a href="./errorrecovery.html">Error Recovery</a></li>
                 <li><a href="./help.html">Help and Documentation</a></li>
               </ul>
-            </li>
+            </div>
         </nav>
       </div>
     </div>
@@ -82,8 +82,8 @@
                       <p>The text chosen feel natural and straightforward. The designers did a good job at synthesizing FAQs in few-word expressions.
                       </p>
                   </div>
-                  <a href="./screenshots/match_faqs.png" rel="shadowbox">
-                      <div class="col-sm-6" ><img src="./screenshots/match_faqs.png" class="image_match"/></div>                   
+                  <a href="./screenshots/match_faqs.png" class="shadowbox">
+                      <div class="col-sm-6" ><img alt="" src="./screenshots/match_faqs.png" class="image_match"/></div>                   
                   </a>
               </div>
               <hr>
@@ -92,8 +92,8 @@
                         <p>There are some awkward formulations though. For instance the section :”What’s happening” should be renamed “Events”.
                         </p>
                     </div>
-                  <a href="./screenshots/match_whats_happening.png" rel="shadowbox">
-                      <div class="col-sm-6"><img src="./screenshots/match_whats_happening.png" class="image_match"/></div>                   
+                  <a href="./screenshots/match_whats_happening.png" class="shadowbox">
+                      <div class="col-sm-6"><img alt="" src="./screenshots/match_whats_happening.png" class="image_match"/></div>                   
                   </a>
               </div>
           </div><!-- /.blog-post -->
