--- a/help.html
+++ b/help.html
@@ -72,7 +72,7 @@
 
     <div class="header">
         <h1 class="htitle">Help & Documentation</h1>
-        <p class="hdescription"> Usuability Evaluation of the University of Leicester website through Neilsen's 10 Heuristics</p>
+        <p class="hdescription">Information, easy to search, that focuses on the users task and provides assistance for task completion.</p>
       </div>
 
         <div class="col-sm-8 blog-main">
