finished with my heuristics (1-4)

--- a/consistency.html
+++ b/consistency.html
@@ -83,7 +83,7 @@
               <div class="container-fluid">
                   <div class="row">
                       <div class="col-sm-6">
-                          <p>For navigation, the home page looks nothing like any other page, it feels that we go through two different websites. If we research something, we go to the google page, embedded in the website, but it does not  feel like the navigation is consistent. 
+                          <p>For navigation, the home page looks nothing like any other page, it feels that we go through two different websites. If we research something, we go to the google embedded page, embedded in the website, but it does not  feel like the navigation is consistent. 
                           </p>
                       </div>
                       <a href="./screenshots/consistency_home_page.png" rel="shadowbox" class="image_consistency_nav_container">
@@ -139,7 +139,7 @@
               <div class="container-fluid">
                   <div class="row">
                       <div class="col-sm-12">
-                          <p>The contact bar at the bottom is not consistent. In the home page, it is relatively tall and black. On the “Our Research” page, it is much shorter, but still black.Finally, on the sports page, the contact bar is short and green.
+                          <p>The contact bar at the bottom is not consistent. In the home page, it is relatively tall and black. On the “Our Research” page, it is much shorter, but still black. Finally, on the sports page, the contact bar is short and green.
                           </p>
                       </div>
                   </div>
