--- a/match.html
+++ b/match.html
@@ -79,7 +79,7 @@
           <div class="blog-post">
               <div class="container-fluid">
                   <div class="col-sm-6">
-                      <p>The text chosen feel natural and straightforward. The designers did a good job at synthesizing FAQs in few-word expressions.
+                      <p>The text chosen feel natural and straightforward. The designers did a good job at synthesizing FAQs in few-word expressions. This makes the website easier to go through for the client, and much cleaner. Confusion is avoided and the intended information gets to the user.
                       </p>
                   </div>
                   <a href="./screenshots/match_faqs.png" rel="shadowbox">
@@ -89,7 +89,7 @@
               <hr>
               <div class="container-fluid">
                     <div class="col-sm-6">
-                        <p>There are some awkward formulations though. For instance the section :”What’s happening” should be renamed “Events”.
+                        <p>There are some awkward formulations though. For instance the section :”What’s happening” should be renamed “Events”. This is a major problem, since the user is less likely to click a link that they do not understand. For instance, there is a link called "hosted bodies". This sound too mysterious and obscure to invite user to click on this link. Therefore, there is a whole part of the website that will not be visited as much as it should be. 
                         </p>
                     </div>
                   <a href="./screenshots/match_whats_happening.png" rel="shadowbox">
