--- a/usercontrol.html
+++ b/usercontrol.html
@@ -78,14 +78,26 @@
 
           <div class="blog-post">
               <div class="container-fluid">
-                  <div class="col-sm-6">
-                      <p>There is not much to interrupt or undo, the website does not implement a back button, but all browsers have it already. Everything loads so fast that the user does not have time to cancel mid navigation
-The only time when there is “loading”, is when we go to the virtual tour. But it doesn t take more than a couple of seconds to get the tour going.
-                      </p>
+                  <div class="row">
+                      <div class="col-sm-6">
+                          <p>There is not much to interrupt or undo, the website does not implement a back button, but all browsers have it already. Everything loads so fast that the user does not have time to cancel mid navigation
+    The only time when there is “loading”, is when we go to the virtual tour. But it does not take more than a couple of seconds to get the tour going. Also, if the user presses the home button, but while the page loads, they click on "Maps and Directions" the request is updated, and the map will show instead of the home page.
+                          </p>
+                      </div>
+                      <a href="./screenshots/usercontrol_virtual.png" rel="shadowbox">
+                          <div class="col-sm-6" ><img src="./screenshots/usercontrol_virtual.png" class="image_usercontrol"/></div>                   
+                      </a>
                   </div>
-                  <a href="./screenshots/usercontrol_virtual.png" rel="shadowbox">
-                      <div class="col-sm-6" ><img src="./screenshots/usercontrol_virtual.png" class="image_usercontrol"/></div>                   
-                  </a>
+                  <hr>
+                  <div class="row">
+                      <div class="col-sm-6">
+                          <p>When the user clicks on "Maps and Directions", they are redirected to a nice interactive map. Even though it does not look like the rest of the site, it is still aesthetic, and it feels like a mobile application, which means that it looks simple, clear, but it is efficient. When the user selects a place, some information about the place appears on the map. There is not only a picture of the place, but also links related to this place such as a link to the department which is in this building.
+                          </p>
+                      </div>
+                      <a href="./screenshots/usercontrol_map.png" rel="shadowbox">
+                          <div class="col-sm-6" ><img src="./screenshots/usercontrol_map.png" class="image_usercontrol"/></div>                   
+                      </a>
+                  </div>
               </div>
           </div><!-- /.blog-post -->
 
