--- a/visibility.html
+++ b/visibility.html
@@ -79,7 +79,7 @@
           <div class="blog-post">
               <div class="container-fluid">
                   <div class="col-sm-6">
-                      <p>Navigation is pretty explicit on this website. On the main page, it is easily inferred that the user can navigate to four main sections: “Study with Us”, “Our Research”, “Business & Enterprise”, “Alumni & Supporters”.
+                      <p>Navigation is pretty explicit on this website. On the main page, it is easily inferred that the user can navigate to four main sections: “Study with Us”, “Our Research”, “Business & Enterprise”, “Alumni & Supporters”. So the primary navigation seems to be a mix of separation of types of people such as students and alumni, but also separation of subjects such as research, classes and business.
                       </p>
                   </div>
                   <a href="./screenshots/visibility_home_page.png" rel="shadowbox">
@@ -89,7 +89,7 @@
               <hr>
               <div class="container-fluid">
                     <div class="col-sm-6">
-                        <p>However, if the user wants to go to “Our Research”, they have to press the “Our Research” tab, and press “Our Research” again. This double click is unnecessary.
+                        <p>However, if the user wants to go to “Our Research”, they have to press the “Our Research” tab, and press “Our Research” again. This double click is unnecessary. Not only is it time consuming, but it also confuses the user. Even though the main background changes, the user might not see that a "Our Research" navigation menu showed up. Therefore, the user might think that the "Our Research" link does not work, and cannot direct them to the research main page.
                         </p>
                     </div>
                   <a href="./screenshots/visibility_double_our_research.png" rel="shadowbox">
@@ -99,7 +99,7 @@
               <hr>
               <div class="container-fluid">
                     <div class="col-sm-6">
-                        <p>It is fairly easy to see where we are by looking at the directory-like map. This allows the user to easily navigate back to the main page. However, the aesthetics of the navigation bar could greatly be improved.
+                        <p>It is fairly easy to see where we are by looking at the directory-like map. This "trail of breadcrumbs" allows the user to easily navigate back to the main page. However, the aesthetics of the navigation bar could greatly be improved.
                         </p>
                     </div>
                   <a href="./screenshots/visibility_nav_bar.png" rel="shadowbox">
