--- a/usercontrol.html
+++ b/usercontrol.html
@@ -84,8 +84,8 @@
     The only time when there is “loading”, is when we go to the virtual tour. But it does not take more than a couple of seconds to get the tour going. Also, if the user presses the home button, but while the page loads, they click on "Maps and Directions" the request is updated, and the map will show instead of the home page.
                           </p>
                       </div>
-                      <a href="./screenshots/usercontrol_virtual.png" rel="shadowbox">
-                          <div class="col-sm-6" ><img src="./screenshots/usercontrol_virtual.png" class="image_usercontrol"/></div>                   
+                      <a href="./screenshots/usercontrol_virtual.png" class="shadowbox">
+                          <div class="col-sm-6" ><img alt="" src="./screenshots/usercontrol_virtual.png" class="image_usercontrol"/></div>                   
                       </a>
                   </div>
                   <hr>
@@ -94,8 +94,8 @@
                           <p>When the user clicks on "Maps and Directions", they are redirected to a nice interactive map. Even though it does not look like the rest of the site, it is still aesthetic, and it feels like a mobile application, which means that it looks simple, clear, but it is efficient. When the user selects a place, some information about the place appears on the map. There is not only a picture of the place, but also links related to this place such as a link to the department which is in this building.
                           </p>
                       </div>
-                      <a href="./screenshots/usercontrol_map.png" rel="shadowbox">
-                          <div class="col-sm-6" ><img src="./screenshots/usercontrol_map.png" class="image_usercontrol"/></div>                   
+                      <a href="./screenshots/usercontrol_map.png" class="shadowbox">
+                          <div class="col-sm-6" ><img alt="" src="./screenshots/usercontrol_map.png" class="image_usercontrol"/></div>                   
                       </a>
                   </div>
               </div>
