--- a/recognition.html
+++ b/recognition.html
@@ -72,7 +72,7 @@
 
     <div class="header">
         <h1 class="htitle">Recognition</h1>
-        <p class="hdescription"> Usuability Evaluation of the University of Leicester website through Neilsen's 10 Heuristics</p>
+        <p class="hdescription">Can the user recognize where he is based on breadcrumbs, color or style?</p>
       </div>
 
         <div class="col-sm-8 blog-main">
